tests/errors/native_function_casing.php
<?php

declare(strict_types=1);

array_Column([], 'lol', 'key');
